# hands_data

./: pyproject.toml
data_extract/document_processor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: manage_dependencies.py
